--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -72,7 +72,8 @@ data.addRows([
 [new Date(2022,2,21,9,30,0),552.92],
 [new Date(2022,2,21,9,45,0),551.68],
 [new Date(2022,2,21,10,0,0),551.89],
-[new Date(2022,2,21,10,0,0),551.89]
+[new Date(2022,2,21,10,15,0),551.43],
+[new Date(2022,2,21,10,15,0),551.43]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -125,8 +126,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">551.4</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 10:15</td>
+<td id="latest-index">551.2</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 10:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
