--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -74,7 +74,8 @@ data.addRows([
 [new Date(2022,2,21,10,15,0),551.43],
 [new Date(2022,2,21,10,30,0),551.24],
 [new Date(2022,2,21,10,45,0),551.1],
-[new Date(2022,2,21,10,45,0),551.1]
+[new Date(2022,2,21,11,0,0),554.17],
+[new Date(2022,2,21,11,0,0),554.17]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -127,8 +128,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">554.2</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 11:00</td>
+<td id="latest-index">554.1</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 11:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
