--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -75,7 +75,8 @@ data.addRows([
 [new Date(2022,2,21,10,30,0),551.24],
 [new Date(2022,2,21,10,45,0),551.1],
 [new Date(2022,2,21,11,0,0),554.17],
-[new Date(2022,2,21,11,0,0),554.17]
+[new Date(2022,2,21,11,15,0),554.06],
+[new Date(2022,2,21,11,15,0),554.06]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -128,13 +129,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">554.1</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 11:15</td>
+<td id="latest-index">555.6</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 11:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">554.2</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 11:00</td>
+<td id="high-index">555.6</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 11:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
