--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -77,7 +77,8 @@ data.addRows([
 [new Date(2022,2,21,11,15,0),554.06],
 [new Date(2022,2,21,11,30,0),555.59],
 [new Date(2022,2,21,11,45,0),557.62],
-[new Date(2022,2,21,11,45,0),557.62]
+[new Date(2022,2,21,12,0,0),558.81],
+[new Date(2022,2,21,12,0,0),558.81]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -130,13 +131,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">558.8</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 12:00</td>
+<td id="latest-index">559.4</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 12:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">558.8</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 12:00</td>
+<td id="high-index">559.4</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 12:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
