--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -78,7 +78,8 @@ data.addRows([
 [new Date(2022,2,21,11,30,0),555.59],
 [new Date(2022,2,21,11,45,0),557.62],
 [new Date(2022,2,21,12,0,0),558.81],
-[new Date(2022,2,21,12,0,0),558.81]
+[new Date(2022,2,21,12,15,0),559.39],
+[new Date(2022,2,21,12,15,0),559.39]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -131,13 +132,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">559.4</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 12:15</td>
+<td id="latest-index">565.9</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 12:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">559.4</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 12:15</td>
+<td id="high-index">565.9</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 12:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
