--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -79,7 +79,8 @@ data.addRows([
 [new Date(2022,2,21,11,45,0),557.62],
 [new Date(2022,2,21,12,0,0),558.81],
 [new Date(2022,2,21,12,15,0),559.39],
-[new Date(2022,2,21,12,15,0),559.39]
+[new Date(2022,2,21,12,30,0),565.93],
+[new Date(2022,2,21,12,30,0),565.93]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -132,13 +133,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">565.9</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 12:30</td>
+<td id="latest-index">567</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 12:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">565.9</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 12:30</td>
+<td id="high-index">567</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 12:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
