--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -81,7 +81,8 @@ data.addRows([
 [new Date(2022,2,21,12,30,0),565.93],
 [new Date(2022,2,21,12,45,0),566.95],
 [new Date(2022,2,21,13,0,0),565.89],
-[new Date(2022,2,21,13,0,0),565.89]
+[new Date(2022,2,21,13,15,0),565.34],
+[new Date(2022,2,21,13,15,0),565.34]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -134,13 +135,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">565.3</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 13:15</td>
+<td id="latest-index">567.2</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 13:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">567</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 12:45</td>
+<td id="high-index">567.2</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 13:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
