--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -82,7 +82,8 @@ data.addRows([
 [new Date(2022,2,21,12,45,0),566.95],
 [new Date(2022,2,21,13,0,0),565.89],
 [new Date(2022,2,21,13,15,0),565.34],
-[new Date(2022,2,21,13,15,0),565.34]
+[new Date(2022,2,21,13,30,0),567.24],
+[new Date(2022,2,21,13,30,0),567.24]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -135,8 +136,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">567.2</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 13:30</td>
+<td id="latest-index">566.7</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 13:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
