--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -84,7 +84,8 @@ data.addRows([
 [new Date(2022,2,21,13,30,0),567.24],
 [new Date(2022,2,21,13,45,0),566.69],
 [new Date(2022,2,21,14,0,0),565.98],
-[new Date(2022,2,21,14,0,0),565.98]
+[new Date(2022,2,21,14,15,0),568.83],
+[new Date(2022,2,21,14,15,0),568.83]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -137,13 +138,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">568.8</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 14:15</td>
+<td id="latest-index">570.4</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 14:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">568.8</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 14:15</td>
+<td id="high-index">570.4</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 14:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
