--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -85,7 +85,8 @@ data.addRows([
 [new Date(2022,2,21,13,45,0),566.69],
 [new Date(2022,2,21,14,0,0),565.98],
 [new Date(2022,2,21,14,15,0),568.83],
-[new Date(2022,2,21,14,15,0),568.83]
+[new Date(2022,2,21,14,30,0),570.4],
+[new Date(2022,2,21,14,30,0),570.4]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -138,8 +139,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">570.4</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 14:30</td>
+<td id="latest-index">570</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 14:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
