--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -86,7 +86,8 @@ data.addRows([
 [new Date(2022,2,21,14,15,0),568.83],
 [new Date(2022,2,21,14,30,0),570.4],
 [new Date(2022,2,21,14,45,0),569.95],
-[new Date(2022,2,21,14,45,0),569.95]
+[new Date(2022,2,21,15,0,0),573.5],
+[new Date(2022,2,21,15,0,0),573.5]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -139,8 +140,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">573.5</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 15:00</td>
+<td id="latest-index">571.8</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 15:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
