--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -88,7 +88,8 @@ data.addRows([
 [new Date(2022,2,21,14,45,0),569.95],
 [new Date(2022,2,21,15,0,0),573.5],
 [new Date(2022,2,21,15,15,0),571.79],
-[new Date(2022,2,21,15,15,0),571.79]
+[new Date(2022,2,21,15,30,0),572.48],
+[new Date(2022,2,21,15,30,0),572.48]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -141,8 +142,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">572.5</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 15:30</td>
+<td id="latest-index">571.9</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 15:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
