--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -94,7 +94,8 @@ data.addRows([
 [new Date(2022,2,21,16,45,0),584.44],
 [new Date(2022,2,21,17,0,0),587.95],
 [new Date(2022,2,21,17,15,0),591.37],
-[new Date(2022,2,21,17,15,0),591.37]
+[new Date(2022,2,21,17,30,0),592.54],
+[new Date(2022,2,21,17,30,0),592.54]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -147,8 +148,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">592.5</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 17:30</td>
+<td id="latest-index">591.4</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 17:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
