--- a/capitIndexChart1W.html
+++ b/capitIndexChart1W.html
@@ -370,7 +370,8 @@ data.addRows([
 [new Date(2022,2,24,8,0,0),595.26],
 [new Date(2022,2,24,8,15,0),591.71],
 [new Date(2022,2,24,8,30,0),594.93],
-[new Date(2022,2,24,8,30,0),594.93]
+[new Date(2022,2,24,8,45,0),594.03],
+[new Date(2022,2,24,8,45,0),594.03]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -423,8 +424,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">594</td>
-<td id="latest-date" class = "leftTextAlign">24 March 2022 08:45</td>
+<td id="latest-index">599.8</td>
+<td id="latest-date" class = "leftTextAlign">24 March 2022 09:00</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
