--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -306,7 +306,8 @@ data.addRows([
 [new Date(2022,2,24,0,0,0),594.37],
 [new Date(2022,2,25,0,0,0),601.17],
 [new Date(2022,2,26,0,0,0),642.61],
-[new Date(2022,2,26,0,0,0),642.61]
+[new Date(2022,2,27,0,0,0),643.31],
+[new Date(2022,2,27,0,0,0),643.31]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy"
@@ -359,8 +360,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">642.5</td>
-<td id="latest-date" class = "leftTextAlign">27 March 2022</td>
+<td id="latest-index">642.7</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
