--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -63,7 +63,8 @@ data.addRows([
 [new Date(2022,2,28,5,0,0),641.27],
 [new Date(2022,2,28,6,0,0),641.27],
 [new Date(2022,2,28,7,0,0),641.27],
-[new Date(2022,2,28,7,0,0),641.27]
+[new Date(2022,2,28,7,15,0),641.39],
+[new Date(2022,2,28,7,15,0),641.39]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -116,8 +117,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">641.4</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 07:15</td>
+<td id="latest-index">641.2</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 07:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
