--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -64,7 +64,8 @@ data.addRows([
 [new Date(2022,2,28,6,0,0),641.27],
 [new Date(2022,2,28,7,0,0),641.27],
 [new Date(2022,2,28,7,15,0),641.39],
-[new Date(2022,2,28,7,15,0),641.39]
+[new Date(2022,2,28,7,30,0),641.16],
+[new Date(2022,2,28,7,30,0),641.16]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -117,13 +118,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">641.2</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 07:30</td>
+<td id="latest-index">649.3</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 07:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">643.3</td>
-<td id="high-date" class = "leftTextAlign">27 March 2022 19:00</td>
+<td id="high-index">649.3</td>
+<td id="high-date" class = "leftTextAlign">28 March 2022 07:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
