--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -65,7 +65,8 @@ data.addRows([
 [new Date(2022,2,28,7,15,0),641.39],
 [new Date(2022,2,28,7,30,0),641.16],
 [new Date(2022,2,28,7,45,0),649.33],
-[new Date(2022,2,28,7,45,0),649.33]
+[new Date(2022,2,28,8,0,0),653.27],
+[new Date(2022,2,28,8,0,0),653.27]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -118,13 +119,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">653.3</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 08:00</td>
+<td id="latest-index">656.7</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 08:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">653.3</td>
-<td id="high-date" class = "leftTextAlign">28 March 2022 08:00</td>
+<td id="high-index">656.7</td>
+<td id="high-date" class = "leftTextAlign">28 March 2022 08:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
