--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -67,7 +67,8 @@ data.addRows([
 [new Date(2022,2,28,7,45,0),649.33],
 [new Date(2022,2,28,8,0,0),653.27],
 [new Date(2022,2,28,8,15,0),656.66],
-[new Date(2022,2,28,8,15,0),656.66]
+[new Date(2022,2,28,8,30,0),657.9],
+[new Date(2022,2,28,8,30,0),657.9]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -120,8 +121,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">657.9</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 08:30</td>
+<td id="latest-index">657.3</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 08:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
