--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -69,7 +69,8 @@ data.addRows([
 [new Date(2022,2,28,8,30,0),657.9],
 [new Date(2022,2,28,8,45,0),657.25],
 [new Date(2022,2,28,9,0,0),663.64],
-[new Date(2022,2,28,9,0,0),663.64]
+[new Date(2022,2,28,9,15,0),667.56],
+[new Date(2022,2,28,9,15,0),667.56]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -122,8 +123,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">667.6</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 09:15</td>
+<td id="latest-index">667.3</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 09:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
