--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -71,7 +71,8 @@ data.addRows([
 [new Date(2022,2,28,9,15,0),667.56],
 [new Date(2022,2,28,9,30,0),667.3],
 [new Date(2022,2,28,9,45,0),667.04],
-[new Date(2022,2,28,9,45,0),667.04]
+[new Date(2022,2,28,10,0,0),674.32],
+[new Date(2022,2,28,10,0,0),674.32]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -124,8 +125,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">674.3</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 10:00</td>
+<td id="latest-index">668.5</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 10:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
