--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -73,7 +73,8 @@ data.addRows([
 [new Date(2022,2,28,9,45,0),667.04],
 [new Date(2022,2,28,10,0,0),674.32],
 [new Date(2022,2,28,10,15,0),668.51],
-[new Date(2022,2,28,10,15,0),668.51]
+[new Date(2022,2,28,10,30,0),668.59],
+[new Date(2022,2,28,10,30,0),668.59]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -126,8 +127,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">668.6</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 10:30</td>
+<td id="latest-index">669.8</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 10:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
