--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -74,7 +74,8 @@ data.addRows([
 [new Date(2022,2,28,10,15,0),668.51],
 [new Date(2022,2,28,10,30,0),668.59],
 [new Date(2022,2,28,10,45,0),669.78],
-[new Date(2022,2,28,10,45,0),669.78]
+[new Date(2022,2,28,11,0,0),672.93],
+[new Date(2022,2,28,11,0,0),672.93]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -127,8 +128,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">672.9</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 11:00</td>
+<td id="latest-index">671.6</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 11:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
