--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -75,7 +75,8 @@ data.addRows([
 [new Date(2022,2,28,10,30,0),668.59],
 [new Date(2022,2,28,10,45,0),669.78],
 [new Date(2022,2,28,11,0,0),672.93],
-[new Date(2022,2,28,11,0,0),672.93]
+[new Date(2022,2,28,11,15,0),671.61],
+[new Date(2022,2,28,11,15,0),671.61]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -128,8 +129,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">671.6</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 11:15</td>
+<td id="latest-index">668.1</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 11:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
