--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -76,7 +76,8 @@ data.addRows([
 [new Date(2022,2,28,10,45,0),669.78],
 [new Date(2022,2,28,11,0,0),672.93],
 [new Date(2022,2,28,11,15,0),671.61],
-[new Date(2022,2,28,11,15,0),671.61]
+[new Date(2022,2,28,11,30,0),668.13],
+[new Date(2022,2,28,11,30,0),668.13]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -130,7 +131,7 @@ drawChart();
 <tr>
 <td class = "rightTextAlign">Latest:</td>
 <td id="latest-index">668.1</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 11:30</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 11:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
