--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -77,7 +77,8 @@ data.addRows([
 [new Date(2022,2,28,11,15,0),671.61],
 [new Date(2022,2,28,11,30,0),668.13],
 [new Date(2022,2,28,11,45,0),668.11],
-[new Date(2022,2,28,11,45,0),668.11]
+[new Date(2022,2,28,12,0,0),669.4],
+[new Date(2022,2,28,12,0,0),669.4]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -130,8 +131,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">669.4</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 12:00</td>
+<td id="latest-index">647.6</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 12:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
