--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -78,7 +78,8 @@ data.addRows([
 [new Date(2022,2,28,11,30,0),668.13],
 [new Date(2022,2,28,11,45,0),668.11],
 [new Date(2022,2,28,12,0,0),669.4],
-[new Date(2022,2,28,12,0,0),669.4]
+[new Date(2022,2,28,12,15,0),647.57],
+[new Date(2022,2,28,12,15,0),647.57]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -131,8 +132,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">647.6</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 12:15</td>
+<td id="latest-index">650.2</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 12:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
