--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -80,7 +80,8 @@ data.addRows([
 [new Date(2022,2,28,12,15,0),647.57],
 [new Date(2022,2,28,12,30,0),650.2],
 [new Date(2022,2,28,12,45,0),650.42],
-[new Date(2022,2,28,12,45,0),650.42]
+[new Date(2022,2,28,13,0,0),647.01],
+[new Date(2022,2,28,13,0,0),647.01]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -133,8 +134,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">647</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 13:00</td>
+<td id="latest-index">642.5</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 13:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
