--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -82,7 +82,8 @@ data.addRows([
 [new Date(2022,2,28,12,45,0),650.42],
 [new Date(2022,2,28,13,0,0),647.01],
 [new Date(2022,2,28,13,15,0),642.51],
-[new Date(2022,2,28,13,15,0),642.51]
+[new Date(2022,2,28,13,30,0),634.11],
+[new Date(2022,2,28,13,30,0),634.11]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -135,8 +136,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">634.1</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 13:30</td>
+<td id="latest-index">630.3</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 13:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
@@ -145,8 +146,8 @@ drawChart();
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
-<td id="low-index">634.1</td>
-<td id="low-date" class = "leftTextAlign">28 March 2022 13:30</td>
+<td id="low-index">630.3</td>
+<td id="low-date" class = "leftTextAlign">28 March 2022 13:45</td>
 </tr>
 </tbody>
 </table>
