--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -83,7 +83,8 @@ data.addRows([
 [new Date(2022,2,28,13,15,0),642.51],
 [new Date(2022,2,28,13,30,0),634.11],
 [new Date(2022,2,28,13,45,0),630.3],
-[new Date(2022,2,28,13,45,0),630.3]
+[new Date(2022,2,28,14,0,0),626.69],
+[new Date(2022,2,28,14,0,0),626.69]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -136,8 +137,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">626.7</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 14:00</td>
+<td id="latest-index">629.1</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 14:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
