--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -85,7 +85,8 @@ data.addRows([
 [new Date(2022,2,28,13,45,0),630.3],
 [new Date(2022,2,28,14,0,0),626.69],
 [new Date(2022,2,28,14,15,0),629.1],
-[new Date(2022,2,28,14,15,0),629.1]
+[new Date(2022,2,28,14,30,0),629.87],
+[new Date(2022,2,28,14,30,0),629.87]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -138,8 +139,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">629.9</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 14:30</td>
+<td id="latest-index">632.3</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 14:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
