--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -89,7 +89,8 @@ data.addRows([
 [new Date(2022,2,28,15,15,0),634.54],
 [new Date(2022,2,28,15,30,0),633.28],
 [new Date(2022,2,28,15,45,0),627.68],
-[new Date(2022,2,28,15,45,0),627.68]
+[new Date(2022,2,28,16,0,0),632.53],
+[new Date(2022,2,28,16,0,0),632.53]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -142,8 +143,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">632.5</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 16:00</td>
+<td id="latest-index">633.6</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
