--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -91,7 +91,8 @@ data.addRows([
 [new Date(2022,2,28,15,45,0),627.68],
 [new Date(2022,2,28,16,0,0),632.53],
 [new Date(2022,2,28,16,15,0),633.6],
-[new Date(2022,2,28,16,15,0),633.6]
+[new Date(2022,2,28,16,30,0),636.06],
+[new Date(2022,2,28,16,30,0),636.06]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -144,8 +145,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">636.1</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 16:30</td>
+<td id="latest-index">633.5</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 16:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
