--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -92,7 +92,8 @@ data.addRows([
 [new Date(2022,2,28,16,15,0),633.6],
 [new Date(2022,2,28,16,30,0),636.06],
 [new Date(2022,2,28,16,45,0),633.54],
-[new Date(2022,2,28,16,45,0),633.54]
+[new Date(2022,2,28,17,0,0),631.96],
+[new Date(2022,2,28,17,0,0),631.96]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -145,8 +146,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">632</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 17:00</td>
+<td id="latest-index">631.2</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 17:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
