--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -94,7 +94,8 @@ data.addRows([
 [new Date(2022,2,28,16,45,0),633.54],
 [new Date(2022,2,28,17,0,0),631.96],
 [new Date(2022,2,28,17,15,0),631.2],
-[new Date(2022,2,28,17,15,0),631.2]
+[new Date(2022,2,28,17,30,0),630.48],
+[new Date(2022,2,28,17,30,0),630.48]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -147,8 +148,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">630.5</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 17:30</td>
+<td id="latest-index">630.7</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 17:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
